fix IT and ignore information schema IT
Signed-off-by: xinyual <xinyual@amazon.com>